Fix typo - encoding in some systems

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
             "role": "Maintainer"
         },
         {
-            "name": "Paweł Potacki",
+            "name": "Pawel Potacki",
             "homepage": "http://potacki.com",
             "role": "Developer"
         }
