--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "cooltronicpl/document-helpers",
-    "description": "Document Helpers",
+    "description": "PDF Generator",
     "type": "craft-plugin",
-    "version": "0.1.1",
+    "version": "0.2.0",
     "keywords": [
         "craft",
         "cms",
@@ -39,7 +39,7 @@
         }
     },
     "extra": {
-        "name": "Document Generator",
+        "name": "PDF Generator",
         "handle": "document-helpers",
         "hasCpSettings": false,
         "hasCpSection": false,
