--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cooltronicpl/document-helpers",
     "description": "PDF Generator",
     "type": "craft-plugin",
-    "version": "1.0.4",
+    "version": "1.1.0",
     "keywords": [
         "craft",
         "cms",
@@ -31,7 +31,8 @@
     ],
     "require": {
         "craftcms/cms": "^4.0.0",
-        "mpdf/mpdf": "^8.0.10"
+        "mpdf/mpdf": "^8.0.10",
+		"baraja-core/php-pdf-to-image":"^1.4.0"
     },
     "autoload": {
         "psr-4": {
