- **Feature**: Introduced `pdfAsset` method, which can create, update, or retrieve a Craft CMS Asset. - **Enhancement**: Added additional options to `pdfOptions` for the new `pdfAsset` method:   - `assetDelete`: Deletes the temporary file after adding the Asset   - `assetTitle`: Sets a custom title for the stored Asset   - `assetFilename`: Sets a custom filename for the stored Asset   - `assetSiteId`: Sets a custom siteId for the Asset - **Feature**: Updated README with descriptions of the new method, options, and a guide on generating thumbnails for PDF Assets.

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "cooltronicpl/document-helpers",
-    "description": "PDF Generator",
+    "description": "Revolutionize your PDF creation process with the PDF Generator for Craft CMS. Create and manage PDFs with ease using customizable templates and a range of options.",
     "type": "craft-plugin",
-    "version": "1.1.1",
+    "version": "1.2.0",
     "keywords": [
         "craft",
         "cms",
@@ -15,7 +15,7 @@
         "docs": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/README.md",
         "issues": "https://github.com/cooltronicpl/Craft-document-helpers/issues"
     },
-    "license": "MIT",
+    "license": "proprietary",
     "authors": [
         {
             "name": "CoolTRONIC.pl sp. z o.o.",
@@ -35,7 +35,7 @@
     },
     "autoload": {
         "psr-4": {
-          "cooltronicpl\\documenthelpers\\": "src/"
+            "cooltronicpl\\documenthelpers\\": "src/"
         }
     },
     "extra": {
