--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,54 @@
     "name": "cooltronicpl/document-helpers",
     "description": "Revolutionize your PDF creation process with the PDF Generator for Craft CMS. Create and manage PDFs with ease using customizable templates and a range of options.",
     "type": "craft-plugin",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "keywords": [
         "craft",
         "cms",
         "craftcms",
         "craft-plugin",
-        "Document helpers",
-        "PDF Genrator"
+        "document helpers",
+        "pdf generator",
+        "document",
+        "pdf",
+        "generator",
+        "mpdf",
+        "twig",
+        "template",
+        "custom",
+        "advanced document generator",
+        "attachment",
+        "output",
+        "input",
+        "custom pdf",
+        "password protected",
+        "meta",
+        "tags",
+        "pdf tags",
+        "pdf meta",
+        "pdf author",
+        "pdf keywords",
+        "keywords",
+        "craft cms plugin",
+        "generate",
+        "documents",
+        "entries",
+        "files",
+        "options",
+        "support",
+        "pdf generator for craft cms",
+        "content",
+        "create",
+        "file",
+        "add",
+        "include",
+        "customize",
+        "simple",
+        "easy",
+        "image",
+        "default",
+        "range",
+        "customizable"
     ],
     "support": {
         "docs": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/README.md",
@@ -18,7 +58,7 @@
     "license": "proprietary",
     "authors": [
         {
-            "name": "CoolTRONIC.pl sp. z o.o.",
+            "name": "CoolTRONIC.pl Sp. z o.o. (LLC)",
             "email": "craft@cooltronic.pl",
             "homepage": "http://cooltronic.pl",
             "role": "Maintainer"
