--- a/composer.json
+++ b/composer.json
@@ -71,7 +71,7 @@
     ],
     "require": {
         "craftcms/cms": "^4.0.0",
-        "mpdf/mpdf": "^8.0.10",
+        "mpdf/mpdf": "^8.0.10"
     },
     "autoload": {
         "psr-4": {
