--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cooltronicpl/document-helpers",
     "description": "Revolutionize your PDF creation process with the PDF Generator for Craft CMS. Create and manage PDFs with ease using customizable templates and a range of options.",
     "type": "craft-plugin",
-    "version": "1.2.5",
+    "version": "1.3.0",
     "keywords": [
         "craft",
         "cms",
@@ -49,7 +49,8 @@
         "image",
         "default",
         "range",
-        "customizable"
+        "customizable",
+        "qrcode"
     ],
     "support": {
         "docs": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/README.md",
@@ -71,7 +72,8 @@
     ],
     "require": {
         "craftcms/cms": "^4.0.0",
-        "mpdf/mpdf": "^8.0.10"
+        "mpdf/mpdf": "^8.0.10",
+        "chillerlan/php-qrcode": "^4.3"
     },
     "autoload": {
         "psr-4": {
