--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "cooltronicpl/document-helpers",
     "description": "Revolutionize your PDF creation process with the PDF Generator for Craft CMS. Create and manage PDFs with ease using customizable templates and a range of options.",
     "type": "craft-plugin",
-    "version": "1.3.2",
+    "version": "2.0.0",
     "keywords": [
         "craft",
         "cms",
@@ -51,7 +51,14 @@
         "range",
         "customizable",
         "asset",
-        "qrcode"
+        "qrcode",
+        "ISO standards PDF",
+        "DIN standards for PDF",
+        "How to protect PDF from printing",
+        "How to prevent PDF from copying",
+        "PDF protection software",
+        "Best PDF protection tools",
+        "BSI Standards compatibile"
     ],
     "support": {
         "docs": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/README.md",
@@ -72,7 +79,7 @@
         }
     ],
     "require": {
-        "craftcms/cms": "^4.0.0",
+        "craftcms/cms": "^4.0.0|^3.0.0",
         "mpdf/mpdf": "^8.0.13"
     },
     "autoload": {
@@ -82,9 +89,10 @@
     },
     "extra": {
         "name": "PDF Generator",
-        "handle": "documenthelpers",
+        "handle": "document-helpers",
         "hasCpSettings": true,
         "hasCpSection": false,
+        "schemaVersion": "2.0.0",
         "changelogUrl": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/CHANGELOG.md",
         "class": "cooltronicpl\\documenthelpers\\DocumentHelper"
     }
