--- a/composer.json
+++ b/composer.json
@@ -2,63 +2,19 @@
     "name": "cooltronicpl/document-helpers",
     "description": "Revolutionize your PDF creation process with the PDF Generator for Craft CMS. Create and manage PDFs with ease using customizable templates and a range of options.",
     "type": "craft-plugin",
-    "version": "2.0.4",
+    "version": "2.1.0",
     "keywords": [
-        "craft",
-        "cms",
-        "craftcms",
-        "craft-plugin",
-        "document helpers",
-        "pdf generator",
-        "document",
-        "pdf",
-        "generator",
         "mpdf",
         "twig",
-        "template",
-        "custom",
-        "advanced document generator",
-        "attachment",
-        "output",
-        "input",
-        "custom pdf",
-        "password protected",
-        "meta",
-        "tags",
-        "pdf tags",
-        "pdf meta",
-        "pdf author",
-        "pdf keywords",
-        "keywords",
-        "craft cms plugin",
-        "generate",
-        "documents",
-        "entries",
-        "files",
-        "options",
-        "support",
-        "pdf generator for craft cms",
-        "content",
-        "create",
-        "file",
-        "add",
-        "include",
-        "customize",
-        "simple",
-        "easy",
-        "image",
-        "default",
-        "range",
-        "customizable",
-        "asset",
+        "pdf-a",
+        "pdf-x",
         "qrcode",
-        "ISO standards PDF",
-        "DIN standards for PDF",
-        "How to protect PDF from printing",
-        "How to prevent PDF from copying",
-        "PDF protection software",
-        "Best PDF protection tools",
-        "BSI Standards compatibile"
+        "watermark",
+        "toc",
+        "bookmark",
+        "thumbnail",
+        "scrape",
+        "purify"
     ],
     "support": {
         "docs": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/README.md",
@@ -92,7 +48,7 @@
         "handle": "document-helpers",
         "hasCpSettings": true,
         "hasCpSection": false,
-        "schemaVersion": "2.0.4",
+        "schemaVersion": "2.1.0",
         "changelogUrl": "https://github.com/cooltronicpl/Craft-document-helpers/blob/master/CHANGELOG.md",
         "class": "cooltronicpl\\documenthelpers\\DocumentHelper"
     }
